--- a/concepts/loaders/index.html
+++ b/concepts/loaders/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head><title>webpack - Loaders</title><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
  module.loaders configuration option
  test, include, exclude, loader, query
-"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="/assets/img/favicon.png"/><link rel="stylesheet" href="/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="/"><span class="logo"><span class="icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%) 
+"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="http://webpack.github.io/webpack.io/assets/img/favicon.png"/><link rel="stylesheet" href="http://webpack.github.io/webpack.io/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="/"><span class="logo"><span class="icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%) 
                         scale3d(1,1,1) 
                         rotateX(0deg) 
                         rotateY(0deg) 
