--- a/concepts/everything-is-a-module/index.html
+++ b/concepts/everything-is-a-module/index.html
@@ -1,11 +1,11 @@
-<html lang="en"><head><title>webpack - Everything is a Module</title><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
+<html lang="en"><head><title>webpack - Everything is a Module</title><base href="//webpack.github.io/webpack.io/" target="_blank"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
 
  everything is a module with dependencies
 
  module tree
 
  static build and restrictions
-"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="//webpack.github.io/webpack.io/assets/img/favicon.png"/><link rel="stylesheet" href="//webpack.github.io/webpack.io/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="/"><span class="logo"><span class="icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%) 
+"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="/assets/img/favicon.png"/><link rel="stylesheet" href="/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="/"><span class="logo"><span class="icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%) 
                         scale3d(1,1,1) 
                         rotateX(0deg) 
                         rotateY(0deg) 
@@ -13,7 +13,7 @@
                         scale3d(0.5,0.5,0.5) 
                         rotateX(0deg) 
                         rotateY(0deg) 
-                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure></span><span class="logo-text -light">Webpack</span></span></a><nav class="navigation-nav"><a class="navigation-nav-link" href="/">Home</a><a class="navigation-nav-link" href="/concepts">Concepts</a><a class="navigation-nav-link" href="/how-to">How to</a><a class="navigation-nav-link" href="/api">API</a></nav></div></div><div class="section-page__wrapper"><h1 class="section__heading">Everything is a Module</h1><a href="https://github.com/webpack/webpack.io/tree/master/content/concepts/everything-is-a-module.md" class="btn btn-sm" target="_blank">Edit</a><div class="section"><div class="section__content"><div><blockquote>
+                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure></span><span class="logo-text -light">Webpack</span></span></a><nav class="navigation-nav"><a class="navigation-nav-link" href="/">Home</a><a class="navigation-nav-link" href="concepts">Concepts</a><a class="navigation-nav-link" href="how-to">How to</a><a class="navigation-nav-link" href="api">API</a></nav></div></div><div class="section-page__wrapper"><h1 class="section__heading">Everything is a Module</h1><a href="https://github.com/webpack/webpack.io/tree/master/content/concepts/everything-is-a-module.md" class="btn btn-sm" target="_blank">Edit</a><div class="section"><div class="section__content"><div><blockquote>
 <p>everything is a module with dependencies</p>
 <p>module tree</p>
 <p>static build and restrictions</p>
