--- a/writers-guide/index.html
+++ b/writers-guide/index.html
@@ -1,10 +1,10 @@
-<html lang="en"><head><title>webpack - Writer&#x27;s Guide</title><base href="//webpack.github.io/webpack.io/" target="_blank"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
+<html lang="en"><head><title>webpack - Writer&#x27;s Guide</title><base href="//webpack.github.io/webpack.io"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
 
 Process
 
 Check related issue if an article links to one.
 Hit edit and expand on the structure.
-PR …"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="/assets/img/favicon.png"/><link rel="stylesheet" href="/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="/"><span class="logo"><span class="icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%) 
+PR …"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="//webpack.github.io/webpack.io/assets/img/favicon.png"/><link rel="stylesheet" href="//webpack.github.io/webpack.io/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="/"><span class="logo"><span class="icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%) 
                         scale3d(1,1,1) 
                         rotateX(0deg) 
                         rotateY(0deg) 
