--- a/how-to/author-libraries/index.html
+++ b/how-to/author-libraries/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head><title>webpack - How to Author Libraries?</title><base href="//webpack.github.io/webpack.io"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
+<html lang="en"><head><title>webpack - How to Author Libraries?</title><base href="//webpack.github.io/webpack.io/"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
  library option
  externals option
 
