--- a/how-to/use-with-docker/index.html
+++ b/how-to/use-with-docker/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head><title>webpack - How to Use with Docker?</title><base href="//webpack.github.io/webpack.io"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
+<html lang="en"><head><title>webpack - How to Use with Docker?</title><base href="//webpack.github.io/webpack.io/"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
 
 44.
 
