--- a/how-to/index.html
+++ b/how-to/index.html
@@ -6,39 +6,39 @@
                         scale3d(0.5,0.5,0.5) 
                         rotateX(0deg) 
                         rotateY(0deg) 
-                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure></span><span class="logo-text -light">Webpack</span></span></a><nav class="navigation-nav"><a class="navigation-nav-link" href="/">Home</a><a class="navigation-nav-link" href="concepts">Concepts</a><a class="navigation-nav-link -active" href="how-to">How to</a><a class="navigation-nav-link" href="api">API</a></nav></div></div><div class="section-index__wrapper"><h1>How to</h1><ul class="section-list"><li><h3 class="section-list__heading"><a href="/how-to/use-with-third-party-tools">How to Use with Third Party Tools?</a></h3><p class="section-list__preview">
+                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure></span><span class="logo-text -light">Webpack</span></span></a><nav class="navigation-nav"><a class="navigation-nav-link" href="/">Home</a><a class="navigation-nav-link" href="concepts">Concepts</a><a class="navigation-nav-link -active" href="how-to">How to</a><a class="navigation-nav-link" href="api">API</a></nav></div></div><div class="section-index__wrapper"><h1>How to</h1><ul class="section-list"><li><h3 class="section-list__heading"><a href="how-to/use-with-third-party-tools">How to Use with Third Party Tools?</a></h3><p class="section-list__preview">
 
  Grunt, Gulp, Mocha, Karma
-</p></li><li><h3 class="section-list__heading"><a href="/how-to/use-with-docker">How to Use with Docker?</a></h3><p class="section-list__preview">
+</p></li><li><h3 class="section-list__heading"><a href="how-to/use-with-docker">How to Use with Docker?</a></h3><p class="section-list__preview">
 
 44.
 
-</p></li><li><h3 class="section-list__heading"><a href="/how-to/upgrade-from-webpack-1">How to Upgrade from Webpack 1?</a></h3><p class="section-list__preview">
-</p></li><li><h3 class="section-list__heading"><a href="/how-to/split-code">How to Split Code?</a></h3><p class="section-list__preview">
+</p></li><li><h3 class="section-list__heading"><a href="how-to/upgrade-from-webpack-1">How to Upgrade from Webpack 1?</a></h3><p class="section-list__preview">
+</p></li><li><h3 class="section-list__heading"><a href="how-to/split-code">How to Split Code?</a></h3><p class="section-list__preview">
  what is code splitting
  System.import
  dynamic System.import
  require.ensure
  AMD require
 
- see al…</p></li><li><h3 class="section-list__heading"><a href="/how-to/shim">How to Shim?</a></h3><p class="section-list__preview">
+ see al…</p></li><li><h3 class="section-list__heading"><a href="how-to/shim">How to Shim?</a></h3><p class="section-list__preview">
  import-loader
  exports-loader
  expose-loader
  ProvidePlugin
- script-loader</p></li><li><h3 class="section-list__heading"><a href="/how-to/improve-build-performance">How to Improve Build Performance?</a></h3><p class="section-list__preview">
+ script-loader</p></li><li><h3 class="section-list__heading"><a href="how-to/improve-build-performance">How to Improve Build Performance?</a></h3><p class="section-list__preview">
  incremental builds
  profile
  analyse tool
  dirty chunks ([chunkhash])
  source maps
- PrefetchPlugin…</p></li><li><h3 class="section-list__heading"><a href="/how-to/handle-dependencies">How to Handle Dependencies?</a></h3><p class="section-list__preview">
+ PrefetchPlugin…</p></li><li><h3 class="section-list__heading"><a href="how-to/handle-dependencies">How to Handle Dependencies?</a></h3><p class="section-list__preview">
  es6 modules
  commonjs
  amd
  require with expression
  require.context
-</p></li><li><h3 class="section-list__heading"><a href="/how-to/handle-compatibility">How to Handle Compatibility?</a></h3><p class="section-list__preview">
+</p></li><li><h3 class="section-list__heading"><a href="how-to/handle-compatibility">How to Handle Compatibility?</a></h3><p class="section-list__preview">
  require.main
  require.cache
  module.loaded
@@ -47,8 +47,8 @@
  __dirname
  __filename
  module.id
-</p></li><li><h3 class="section-list__heading"><a href="/how-to/generate-production-build">How to Generate a Production Build?</a></h3><p class="section-list__preview">
-</p></li><li><h3 class="section-list__heading"><a href="/how-to/develop">How to Develop?</a></h3><p class="section-list__preview">
+</p></li><li><h3 class="section-list__heading"><a href="how-to/generate-production-build">How to Generate a Production Build?</a></h3><p class="section-list__preview">
+</p></li><li><h3 class="section-list__heading"><a href="how-to/develop">How to Develop?</a></h3><p class="section-list__preview">
  devtool
  output.pathinfo
  hot module replacement
@@ -56,12 +56,12 @@
  watch
  caching
  dev middleware
- in memory compi…</p></li><li><h3 class="section-list__heading"><a href="/how-to/contribute">How to Contribute?</a></h3><p class="section-list__preview">
+ in memory compi…</p></li><li><h3 class="section-list__heading"><a href="how-to/contribute">How to Contribute?</a></h3><p class="section-list__preview">
 
 TODO
-</p></li><li><h3 class="section-list__heading"><a href="/how-to/cache">How to Cache?</a></h3><p class="section-list__preview">
+</p></li><li><h3 class="section-list__heading"><a href="how-to/cache">How to Cache?</a></h3><p class="section-list__preview">
  https://gist.github.com/sokra/ff1b0290282bfa2c037bdb6dcca1a7aa
- [hash], [chunkhash], CommonsChunkP…</p></li><li><h3 class="section-list__heading"><a href="/how-to/author-libraries">How to Author Libraries?</a></h3><p class="section-list__preview">
+ [hash], [chunkhash], CommonsChunkP…</p></li><li><h3 class="section-list__heading"><a href="how-to/author-libraries">How to Author Libraries?</a></h3><p class="section-list__preview">
  library option
  externals option
 
