--- a/how-to/index.html
+++ b/how-to/index.html
@@ -1,82 +1,22 @@
-<html lang="en"><head><title>webpack - How to</title><base href="//webpack.github.io/webpack.io/"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="//webpack.github.io/webpack.io/assets/img/favicon.png"/><link rel="stylesheet" href="//webpack.github.io/webpack.io/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="index.html"><span class="logo"><span class="icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%)
-                        scale3d(1,1,1)
-                        rotateX(0deg)
-                        rotateY(0deg)
-                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure><figure class="icon-cube -inner" style="width:20px;height:20px;transform:translateX(-50%)
-                        scale3d(0.5,0.5,0.5)
-                        rotateX(0deg)
-                        rotateY(0deg)
-                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure></span><span class="logo-text -light">Webpack</span></span></a><nav class="navigation-nav"><a class="navigation-nav-link" href="index.html">Home</a><a class="navigation-nav-link" href="concepts">Concepts</a><a class="navigation-nav-link -active" href="how-to">How to</a><a class="navigation-nav-link" href="api">API</a></nav></div></div><div class="section-index__wrapper"><h1>How to</h1><ul class="section-list"><li><h3 class="section-list__heading"><a href="how-to/use-with-third-party-tools">How to Use with Third Party Tools?</a></h3><p class="section-list__preview">
-
- Grunt, Gulp, Mocha, Karma
-</p></li><li><h3 class="section-list__heading"><a href="how-to/use-with-docker">How to Use with Docker?</a></h3><p class="section-list__preview">
-
-44.
-
-</p></li><li><h3 class="section-list__heading"><a href="how-to/upgrade-from-webpack-1">How to Upgrade from Webpack 1?</a></h3><p class="section-list__preview">
-</p></li><li><h3 class="section-list__heading"><a href="how-to/split-code">How to Split Code?</a></h3><p class="section-list__preview">
- what is code splitting
- System.import
- dynamic System.import
- require.ensure
- AMD require
-
- see al…</p></li><li><h3 class="section-list__heading"><a href="how-to/shim">How to Shim?</a></h3><p class="section-list__preview">
- import-loader
- exports-loader
- expose-loader
- ProvidePlugin
- script-loader</p></li><li><h3 class="section-list__heading"><a href="how-to/improve-build-performance">How to Improve Build Performance?</a></h3><p class="section-list__preview">
- incremental builds
- profile
- analyse tool
- dirty chunks ([chunkhash])
- source maps
- PrefetchPlugin…</p></li><li><h3 class="section-list__heading"><a href="how-to/handle-dependencies">How to Handle Dependencies?</a></h3><p class="section-list__preview">
- es6 modules
- commonjs
- amd
- require with expression
- require.context
-</p></li><li><h3 class="section-list__heading"><a href="how-to/handle-compatibility">How to Handle Compatibility?</a></h3><p class="section-list__preview">
- require.main
- require.cache
- module.loaded
- global
- process
- __dirname
- __filename
- module.id
-</p></li><li><h3 class="section-list__heading"><a href="how-to/generate-production-build">How to Generate a Production Build?</a></h3><p class="section-list__preview">
-</p></li><li><h3 class="section-list__heading"><a href="how-to/develop">How to Develop?</a></h3><p class="section-list__preview">
- devtool
- output.pathinfo
- hot module replacement
-
- watch
- caching
- dev middleware
- in memory compi…</p></li><li><h3 class="section-list__heading"><a href="how-to/contribute">How to Contribute?</a></h3><p class="section-list__preview">
+<html lang="en"><head><title>webpack - How to</title><base href="//webpack.github.io/webpack.io/"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui"/><meta name="description" content="
 
 TODO
-</p></li><li><h3 class="section-list__heading"><a href="how-to/cache">How to Cache?</a></h3><p class="section-list__preview">
- https://gist.github.com/sokra/ff1b0290282bfa2c037bdb6dcca1a7aa
- [hash], [chunkhash], CommonsChunkP…</p></li><li><h3 class="section-list__heading"><a href="how-to/author-libraries">How to Author Libraries?</a></h3><p class="section-list__preview">
- library option
- externals option
 
- see also [[Output]]</p></li></ul></div><footer class="footer"><div class="container footer-inner"><section class="footer-inner-left"><a class="footer-inner-link" href="get-started">Get Started</a><a class="footer-inner-link" href="analyze">Analyze</a><a class="footer-inner-link" href="contribute">Contribute</a></section><section class="footer-inner-middle"><a href="/"><span class="icon -dark" style="width:18px;margin-left:9px;padding-bottom:9px;"><figure class="icon-cube -outer" style="width:18px;height:18px;transform:translateX(-50%)
-                        scale3d(1,1,1)
-                        rotateX(0deg)
-                        rotateY(0deg)
-                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(9px);"></section></figure><figure class="icon-cube -inner" style="width:18px;height:18px;transform:translateX(-50%)
-                        scale3d(0.5,0.5,0.5)
-                        rotateX(0deg)
-                        rotateY(0deg)
-                        rotateZ(0deg);"><section class="icon-cube-face" style="transform:rotateX(0deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateX(-90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateX(90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateY(-90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateY(90deg) translateZ(9px);"></section><section class="icon-cube-face" style="transform:rotateY(180deg) translateZ(9px);"></section></figure></span></a></section><section class="footer-inner-right"><a class="footer-inner-link" href="changelog">Changelog</a><a class="footer-inner-link" href="license">License</a></section></div></footer><div class="right ribbon github-fork-ribbon-wrapper"><div class="github-fork-ribbon" style="background-color:black;"><a href="https://github.com/webpack/webpack" target="_blank">Fork me on GitHub</a></div></div><div><div class="gitter-open-chat-button">Need help?</div><script type="text/javascript">
-            ((window.gitter = {}).chat = {}).options = {
-              showChatByDefault: false,
-              activationElement: '.gitter-open-chat-button',
-              room: 'webpack/webpack'
-            };
-          </script><script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async="" defer=""></script></div></main></body></html>
+"/><meta name="keywords" content="webpack,javascript,web development,programming"/><link rel="icon" type="image/png" href="//webpack.github.io/webpack.io/assets/img/favicon.png"/><link rel="stylesheet" href="//webpack.github.io/webpack.io/assets/main.css"/></head><body><main role="main"><div class="navigation "><div class="container navigation-inner"><a class="navigation-logo" href="index.html"><span class="logo"><span class="webpack-icon -light" style="width:20px;margin-left:10px;padding-bottom:10px;"><figure class="webpack-icon-cube -outer" style="width:20px;height:20px;transform:translateX(-50%)
+              scale3d(1,1,1)
+              rotateX(0deg)
+              rotateY(0deg)
+              rotateZ(0deg);"><section class="webpack-icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure><figure class="webpack-icon-cube -inner" style="width:20px;height:20px;transform:translateX(-50%)
+              scale3d(0.5,0.5,0.5)
+              rotateX(0deg)
+              rotateY(0deg)
+              rotateZ(0deg);"><section class="webpack-icon-cube-face" style="transform:rotateX(0deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(-90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(-90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(90deg) translateZ(10px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(180deg) translateZ(10px);"></section></figure></span><span class="logo-text -light">Webpack</span></span></a><nav class="navigation-nav"><a class="navigation-nav-link" href="/concepts">Concepts</a><a class="navigation-nav-link -active" href="/how-to">How to</a><a class="navigation-nav-link" href="/api">API</a><a class="navigation-nav-link" href="///github.com/webpack/webpack.io">Github</a></nav></div></div><aside class="sidecar"><a href="https://github.com/webpack/webpack" class="sidecar-item -github"><span>See the Repo</span><i class="icon-github"></i></a><a href="#" class="sidecar-item -gitter"><span>Get Help on Gitter</span><i class="icon-gitter"></i></a><a href="https://medium.com/webpack" class="sidecar-item -medium"><span>Visit Our Blog</span><i class="icon-medium"></i></a><a href="http://stackoverflow.com/questions/tagged/webpack" class="sidecar-item -so"><span>Browse Webpack on SO</span><i class="icon-stack-overflow"></i></a></aside><div class="container page"><nav class="sidebar"><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/use-with-third-party-tools">How to Use with Third Party Tools?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/use-with-docker">How to Use with Docker?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/upgrade-from-webpack-1">How to Upgrade from Webpack 1?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/split-code">How to Split Code?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/shim">How to Shim?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/index">How to</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/improve-build-performance">How to Improve Build Performance?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/handle-dependencies">How to Handle Dependencies?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/handle-compatibility">How to Handle Compatibility?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/generate-production-build">How to Generate a Production Build?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/develop">How to Develop?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/cache">How to Cache?</a></div><div class="sidebar-link"><a class="sidebar-link-text" href="/how-to/author-libraries">How to Author Libraries?</a></div></nav><section class="page-content"><h1>How to</h1><a class="page-edit" href="https://github.com/webpack/webpack.io/edit/master/content/how-to/index.md">Edit this Page  <i class="icon-edit"></i></a><div><p>TODO</p>
+</div></section></div><footer class="footer"><div class="container footer-inner"><section class="footer-inner-left"><a class="footer-inner-link" href="get-started">Get Started</a><a class="footer-inner-link" href="analyze">Analyze</a><a class="footer-inner-link" href="contribute">Contribute</a></section><section class="footer-inner-middle"><a href="/"><span class="webpack-icon -dark" style="width:18px;margin-left:9px;padding-bottom:9px;"><figure class="webpack-icon-cube -outer" style="width:18px;height:18px;transform:translateX(-50%)
+              scale3d(1,1,1)
+              rotateX(0deg)
+              rotateY(0deg)
+              rotateZ(0deg);"><section class="webpack-icon-cube-face" style="transform:rotateX(0deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(-90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(-90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(180deg) translateZ(9px);"></section></figure><figure class="webpack-icon-cube -inner" style="width:18px;height:18px;transform:translateX(-50%)
+              scale3d(0.5,0.5,0.5)
+              rotateX(0deg)
+              rotateY(0deg)
+              rotateZ(0deg);"><section class="webpack-icon-cube-face" style="transform:rotateX(0deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(-90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateX(90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(-90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(90deg) translateZ(9px);"></section><section class="webpack-icon-cube-face" style="transform:rotateY(180deg) translateZ(9px);"></section></figure></span></a></section><section class="footer-inner-right"><a class="footer-inner-link" href="//gitter.im/webpack/webpack">Support</a><a class="footer-inner-link" href="changelog">Changelog</a><a class="footer-inner-link" href="license">License</a></section></div></footer></main></body></html>
